<resources>
    <string name="app_name">TutiPay</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="key_scheme">key_scheme</string>
    <string name="key_language">key_language</string>
    <string name="key_batch">key_batch</string>
    <string name="key_reports">key_reports</string>
    <string name="key_reverse">key_reverse</string>
    <string name="key_working_key">key_working_key</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fingerprint_title">Identification</string>
    <string name="fingerprint_message">Confirm your identity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="key_terminal">key_terminal</string>
    <string name="key_client">key_client</string>
    <string name="key_master_key">key_master_key</string>
    <string name="key_host">key_host</string>
    <string name="key_port">key_port</string>
    <string name="key_admin_password">key_admin_password</string>
    <string name="key_merchant_password">key_merchant_password</string>
    <string name="support_sudan">Support Sudan</string>
    <string name="pan_length_validation">Pan length is either 16 or 19</string>
    <string name="ipin_management">iPIN</string>
    <string name="add_cards">Add a payment card to your account</string>
    <string name="proceed">PROCEED</string>
    <string name="phone_number">Phone number</string>
    <string name="ipin">IPIN</string>
    <string name="otp">OTP</string>
    <string name="expiration_date">expiration date</string>
    <string name="pan_prompt">Enter PAN</string>
    <string name="ipin_management1">IPIN Management</string>
    <string name="amount_prompt">Enter amount</string>
    <string name="continue_offline">Continue as a guest</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="balance_service">Balance Inquirty</string>
    <string name="card_transfer_service">Card Transfer</string>
    <string name="support_sudan_service">Suppot Sudan</string>
    <string name="telecommunication_service">Telecommunications Top Up</string>
    <string name="name">Name</string>
    <string name="balance_inquiry">Balance Inquiry</string>
    <string name="funds_transfer">Funds Transfer</string>
    <string name="telecom_service">Telecom</string>
    <string name="nec_service">NEC</string>
    <string name="e15_service">E15</string>
    <string name="qr_pay_service">QR Pay</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">EMAIL</string>
    <string name="mobile">MOBILE</string>
    <string name="full_name">FULL NAME</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="expiry_date">EXPIRY DATE</string>
    <string name="card_name">CARD NAME</string>
    <string name="save_online_prompt">Save online (not recommended)</string>
    <string name="save_card">SAVE</string>
    <string name="confirm">Confirm</string>
    <string name="card_alt">This your payment card</string>
    <string name="my_cards_title">My Cards</string>
    <string name="loading_wait">Please wait…</string>
    <string name="main_home">Home</string>
    <string name="main_cards">Cards</string>
    <string name="main_profile">Profile</string>
    <string name="main_settings">Settings</string>
    <string name="main_logout">Logout</string>
    <string name="loading">Loading</string>
    <string name="sign_up_success_message">Signed up succeeded</string>
    <string name="result_word">Result</string>
    <string name="merchant_id">MERCHANT ID</string>
    <string name="key_downloaded">Key downloaded successfully</string>
    <string name="connection_timed_out">Unable to connect to host</string>
    <string name="zain_top_up_service">Zain Top-up</string>
    <string name="enter_phone_prompt">Enter a phone number</string>
    <string name="enter_amount_prompt">Amount cannot be empty</string>
    <string name="service">Service</string>
    <string name="initial_amount">0.00 SDG</string>
    <string name="card_holder">Card Holder</string>
    <string name="languages">Switch Language</string>
    <string name="proudly_powered_by_cashq">Proudly Powered by ITQAN</string>
    <string name="bill_inquiry_title">Bill Inquiry</string>
    <string name="bill_payment_title">Bill Payment</string>
    <string name="top_up_title">Top-Up</string>
    <string name="card_transfer_title">Card Transfer</string>
    <string name="support_sudan_title">Support Sudan</string>
    <string name="covid_19_title">Covid19 Support</string>
    <string name="purchase_title">Purchase</string>
    <string name="generate_new_ipin">Generate new IPin</string>
    <string name="meter_number">METER NUMBER</string>
    <string name="invoice_number">INVOICE NUMBER</string>
    <string name="zain_biller">ZAIN</string>
    <string name="sudani_biller_name">SUDANI</string>
    <string name="mtn_biller_name">MTN</string>
    <string name="phone_caps">PHONE</string>
    <string name="invoice_number_caps">INVOICE NUMBER</string>
    <string name="add_new_card_prompt">Add New Card</string>
    <string name="templ">Successful</string>
    <string name="success">Successful</string>
    <string name="failure">Failed</string>
    <string name="education_title">Education</string>
    <string name="mohe_arab_title">MOHE Arab</string>
    <string name="service_payment_title">Service Payment</string>
    <string name="electricity_service">Electricity</string>
    <string name="ipin_generation_service">IPIN Generation</string>
    <string name="mohe_sudan_title">MOHE Sudan</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_message">Please check your internet connection and try again.</string>
    <string name="pin_change">PIN Change</string>
    <string name="voucher_title">Voucher</string>
    <string name="customs_title">Customs</string>
    <string name="e15_bill_inquiry">E15 Bill Inquiry</string>
    <string name="invoice_number_error_message">Invoice Number cannot be empty</string>
    <string name="empty_phone_number_error">Phone Number cannot be empty</string>
    <string name="valid_phone_number">Enter a valid phone number</string>
    <string name="purchase_electricity">Purchase Electricity</string>
    <string name="support_sudan_view">Support Sudan</string>
    <string name="customs_bill_inquiry">Customs Bill Inquiry</string>
    <string name="customs_bill_payment">Customs Bill Payment</string>
    <string name="mohe_bill_payment_title">MOHE Bill Payment</string>
    <string name="mohe_bill_inquiry_title">MOHE Bill Inquiry</string>
    <string name="mohe_arab_payment_title">MOHE Arab Bill Payment</string>
    <string name="mohe_arab_inquiry_title">MOHE Arab Bill Inquiry</string>
    <string name="zain_inquiry_service">Zain Bill Inquiry</string>
    <string name="sudani_inquiry_service">Sudani Bill Inquiry</string>
    <string name="mtn_inquiry_service">MTN Bill Inquiry</string>
    <string name="zain_bill_payment_service">Zain Bill Payment</string>
    <string name="sudani_bill_payment_service">Sudani Bill Payment</string>
    <string name="mtn_bill_payment_service">MTN Bill Payment</string>
    <string name="invalid_phone_error">Enter a valid phone number</string>
    <string name="empty_amount_error">Amount cannot be empty</string>
    <string name="currency_string">\" SDG\"</string>
    <string name="wrong_phone_number_error">Enter a valid phone number</string>
    <string name="sudani_top_up_result">Sudani Top-up</string>
    <string name="mtn_top_up_result">MTN Top-up</string>
    <string name="zain_top_up_result">Zain Top-up</string>
    <string name="empty_expdate_error">Expdate cannot be empty</string>
    <string name="e15_payment_result">E15 Bill Payment</string>
    <string name="e15_inquiry_result">E15 Bill Inquiry</string>
    <string name="service_result">Service</string>
    <string name="delete">Delete</string>
    <string name="save_online_not_recommended">Save online (not recommended)</string>
    <string name="about">About</string>
    <string name="shortcut_balance_title">Balance</string>
    <string name="add_edit_card">Edit Card</string>
    <string name="card_null_error">No card was added</string>
    <string name="deletion_message">Delete Card</string>
    <string name="dash_balance">Name</string>
    <string name="sign_in">Sign In</string>
    <string name="try_again">Try again</string>
    <string name="username_empty_prompt">Username cannot be empty</string>
    <string name="password_empty_prompt">Password cannot be empty</string>
    <string name="form_errors">Required fields are missing</string>
    <string name="qr_more">QR Info</string>
    <string name="quickpay">qPay</string>
    <string name="generate_card">Generate Card</string>
    <string name="generate_card_completion">Step 2: Card verification</string>
    <string name="card_issuance_activity">Issue a new card</string>
    <string name="enter_otp_prompt">Enter the 4 digits SMS code you received from 2999</string>
    <string name="unexpected_error">App error</string>
    <string name="account_transfer_title">Account Transfer</string>
    <string name="Vouchers">Voucher</string>
    <string name="add_a_new_card_to_cashq">Add a new card to CashQ</string>
    <string name="voucher_generation">Voucher Generation</string>
    <string name="card_added_successfully">Card addedd successfully!</string>
    <string name="Rety">Retry</string>
    <string name="ipin_success_message">IPIN generated successfully!</string>
    <string name="confirm_ipin">Confirm IPIN</string>
</resources>