<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/main_home" />
        <item
            android:id="@+id/cards"
            android:icon="@drawable/ic_card"
            android:iconTint="@color/darkGray"
            android:title="@string/main_cards" />
        <item
            android:id="@+id/services"
            android:icon="@drawable/ic_person_black_24dp"
            android:iconTint="@color/darkGray"
            android:title="@string/main_profile" />
        <!--
        <item android:id="@+id/ipin_change" android:title="iPIN Change" android:icon="@drawable/ic_lock" android:iconTint="@color/darkGray"/>
        -->

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/main_settings" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/main_logout" />
        <item
            android:id="@+id/ipin_side"
            android:title="@string/ipin_management"
            android:icon="@drawable/ic_lock" />
        <item
            android:id="@+id/about"
            android:title="@string/about"
            android:icon="@drawable/ic_info" />

    </group>
</menu>